--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -12,7 +12,29 @@ form .avatar{
     overflow: hidden;
     /* border: solid black 1px; */
 }
-.navbar-nav .container-avatar ,
-.pub_image .container-avatar {
+.navbar-nav .container-avatar img,
+.pub_image .container-avatar img {
+    width: 100%;
     height: 100%;
+}
+.pub_image{
+    margin-bottom: 25px;
+}
+.nickname{
+    color: grey;
+}
+.image-container{
+    width: 100%;
+    max-height: 400px;
+    overflow: hidden;
+}
+.image-container img{
+    width: 100%;
+}
+
+.pub_image .card-body{
+    padding: 0;
+}
+.pub_image .description{
+    padding: 20px;
 }
